# IdentityMapper

./: .gitattributes  .gitignore  CHANGELOG.md  IdentityMapper.code-workspace  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
compliance/: README.md  test_protocol_compliance.py
config/: config.json
docs/: architecture-verification.md  architecture.md  capability-protocol.md  compatibility-matrix.md  compliance-badge.md  external-implementation-experiment.md  host-service.md  host.md  identitymapper-protocol.md  implementers-guide.md  index.md  provider-footprint.md  reduction-matrix.md  reduction-template.md
docs/capabilities/: authenticate.md  index.md  map-identity.md  resolve-identity.md  verify-credential.md
docs/domain/: credential.md  identification.md  identity-candidate.md  identity-target.md  identity.md  index.md  target-identity.md
tests/: test_api_key_authentication.py  test_basic_authentication.py  test_basic_authentication_mapper.py  test_capabilities.py  test_capability_protocol.py  test_certificate_authentication.py  test_domain.py  test_federated_authentication.py  test_guest_authentication.py  test_identity_mapper_service.py  test_jwt_authentication.py  test_kerberos_authentication.py  test_ldap_authentication.py  test_local_user_target.py  test_mfa_authentication.py  test_oauth_authentication.py  test_passkeys_authentication.py  test_provider_capability_contracts.py  test_provider_matrices.py  test_reduction_templates.py  test_saml_authentication.py  test_webauthn_authentication.py  test_windows_authentication.py
(+224 files in other folders)
